--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +18,34 @@
         ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="main-content">
+        <div class="pablo">
+          <h1>“Cansei de ser moderno. Quero ser eterno.”</h1>
+        <h2>— Pablo Picasso</h2> <a href="https://www.todamateria.com.br/pablo-picasso/" target="_blank"><img class="img-pablo" src="img/pablo.picasso.jpg" alt="Pablo Picasso"></a>
+      </div>
+        <div class="texto">
+          <h1>Seja bem vindo à página dos Picassos Falsos</h1>
+          <h6>(fanmade)</h6>
+          <img src="img/picassos falsos.jpg" alt="">
+          <br>    
+          <p>
+            Infelizmente essa frase não é nossa, mas de um grande pintor espanhol, e como forma de homenagem é o nome dessa grande banda brasileira. Aqui você encontrará informações sobre a banda, suas músicas,
+            vídeos, fotos e muito mais. Explore o site para conhecer melhor
+            essa banda brasileira incrível que tem conquistado fãs ao redor do mundo todo.
+          </p>
+          <p>
+            Navegue pelas diferentes seções do site para descobrir a história
+            da banda, ouvir suas músicas favoritas, assistir a vídeos, 
+            e ver fotos interessantes.
+          </p>
+          <p>
+            Se você é fã da banda ou está curioso para saber mais, este é o
+            lugar certo! Aproveite sua visita e não hesite em entrar em contato
+            conosco se tiver alguma dúvida ou comentário. (Para entrar em contato, clique na seção "<i>SOBRE MIM</i>" no menu acima👆 e preencha o formulário.)
+          </p>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
