--- a/home.html
+++ b/home.html
@@ -27,10 +27,10 @@
         <div class="texto">
           <h1>Seja bem vindo à página dos Picassos Falsos</h1>
           <h6>(fanmade)</h6>
-          <img src="img/picassos falsos.jpg" alt="">
+          <div class="div-roda"><img class="roda" src="img/picassos redondos.png" alt=""></div>
           <br>    
           <p>
-            Infelizmente essa frase não é nossa, mas de um grande pintor espanhol, e como forma de homenagem é o nome dessa grande banda brasileira. Aqui você encontrará informações sobre a banda, suas músicas,
+            Infelizmente aquela frase não é nossa, mas de um grande pintor espanhol, e como forma de homenagem é o nome dessa grande banda brasileira. Aqui você encontrará informações sobre a banda, suas músicas,
             vídeos, fotos e muito mais. Explore o site para conhecer melhor
             essa banda brasileira incrível que tem conquistado fãs ao redor do mundo todo.
           </p>
