--- a/historia.html
+++ b/historia.html
@@ -1,77 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História</title>
+    <link rel="stylesheet" href="CSS/historia.css">
 </head>
+
 <body>
     <header>
-
+        <div class="h-title">
+            <h2>HISTÓRIA</h2>
+        </div>
+        <nav>
+            <a href="home.html">HOME</a>
+            <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a><a href="videos.html">VÍDEOS E
+                FOTOS</a> <a href="eu.html">SOBRE MIM</a>
+        </nav>
     </header>
 
 
     <main>
-A banda Picassos Falsos (muitas vezes chamada “Falsos Picassos” por engano) é um grupo carioca bastante inovador no cenário do rock/pop brasileiro, especialmente pela forma pioneira com que misturou ritmos tradicionais brasileiros com rock, funk, soul etc. Aqui vai um panorama da história deles:
+        <p>
+        <h2>Picassos Falsos é uma banda brasileira surgida em 1985 no Rio de Janeiro.</h2>
+        </p>
+        <br>
+        <div>
+        <p>A banda foi uma das pioneiras, na geração dos anos 1980, em misturar <strong>rock, soul e funk com baião,
+                afoxé,
+                ijexá, maracatu, coco e samba</strong> , algo que só viria a ser comum na música brasileira a partir dos
+            anos 1990,
+            com artistas como Chico Science & Nação Zumbi e Mundo Livre S/A.</p>
 
+        <p>A banda fez sucesso com canções como "<a href="sucessos.html">Carne e Osso</a> ", "<a
+                href="sucessos.html">Quadrinhos</a>", "<a href="sucessos.html">Bolero</a>" e "<a
+                href="sucessos.html">Rio de Janeiro</a>".</p>
+</div>
+        <h3>Biografia</h3>
+        <p>A banda nasceu com o nome de O Verso, em 1985, no bairro carioca da Tijuca, apresentando-se em espaços
+            undergrounds e bares na cidade do Rio de Janeiro. Na primeira formação pós O Verso, constavam Humberto Effe
+            (voz), Abílio Azambuja (bateria), Gustavo Corsi (guitarra) e Caíca (baixo). Inspirando-se no título de uma
+            canção da banda Brasil Palace, o grupo passou a se chamar Picassos Falsos em 1986.</p>
 
+        <p> No ano seguinte, o quarteto grava uma fita demo produzida por Alvin L. e financiada por Maurílio Meireles,
+            dono
+            da loja de discos Subsom. Duas das canções registradas (a terceira foi "Idade Média"), "Carne e Osso"
+            (Abílio,
+            Caíca, Luiz Gustavo e Humberto Effe) e "Quadrinhos" (Pequinho e Humberto Effe), entraram na programação da
+            rádio
+            Fluminense FM, emissora responsável pelo lançamento de grupos como Paralamas do Sucesso, Kid Abelha & Os
+            Abóboras Selvagens e Legião Urbana. Ao ouvir as canções da banda na rádio, o jornalista e produtor José
+            Emílio
+            Rondeau interessou-se pelo som do Picassos Falsos e agenciou um contrato com o selo Plug, braço roqueiro da
+            gravadora BMG/Ariola (antiga RCA).</p>
 
-## Início e formação
+        <p>Em 1987, é lançado o primeiro LP, Picassos Falsos, já com o baixista Zé Henrique no lugar de Caíca.
+            "Quadrinhos"
+            e "Carne e Osso" têm boa execução nas rádios cariocas e de Belo Horizonte. "Quadrinhos" também entrou para a
+            trilha sonora do programa Armação Ilimitada, da Rede Globo. A música "Carne e osso" incluía uma citação do
+            samba
+            "Se você Jurar", de Ismael Silva. Em meados de 1987, Zé Henrique deixa o Picassos Falsos e é substituído por
+            Bombom, ex-Kongo e futuro Conexão Japeri do cantor Ed Motta.</p>
 
- Surgiu em 1985, no Rio de Janeiro, no bairro da Tijuca. 
- Inicialmente se chamava O Verso, com os integrantes Humberto Effe (voz), Abílio Azambuja (bateria), Gustavo Corsi (guitarra) e Caíca (baixo). 
- Em 1986 o grupo adota o nome Picassos Falsos, inspirado num título de canção da banda Brasil Palace. 
+        <p>Com o segundo disco, Supercarioca, lançado em 1988, a banda radicalizou o conceito de misturar rock com
+            música
+            brasileira. Apesar de não ter feito o mesmo sucesso que o disco anterior, o LP é tido até hoje pela crítica
+            e
+            por artistas como um dos trabalhos mais inovadores da geração 80 do rock brasileiro. Também lançado pelo
+            selo
+            Plug, o álbum marcou a entrada do novo baixista Luiz Henrique Romagnoli. O disco incluiu composições
+            inspiradas
+            pelas tragédias decorrentes dos temporais que assolaram a cidade do Rio de Janeiro naquele ano. O LP trouxe
+            também citações de canções de Noel Rosa e Jimi Hendrix. Outras composições que se destacaram deste mesmo
+            disco
+            foram: "Wolverine" (Luiz Henrique, Abílio, Luiz Gustavo e Humberto Effe), "O homem que não vendeu sua alma"
+            (Luiz Henrique, Abílio, Luiz Gustavo e Humberto Effe), "Rio de Janeiro" (Luiz Gustavo e Humberto Effe),
+            "Retinas", "Sangue" e a faixa-título, "Supercarioca", também de autoria de Humberto Effe. O ijexá
+            "Fevereiro" e
+            os samba-rocks "Verões" e "Fevereiro 2" aproximavam mais o quarteto das tradições da música brasileira.</p>
 
+        <p>Em 1990, o grupo se separou. Humberto Effe dedicou-se à carreira solo, gravando um CD pela Virgin; Gustavo
+            Corsi
+            (Luiz Gustavo) seguiu a carreira de músico profissional, tocando com artistas como Ivo Meirelles, Claudio
+            Zoli e
+            Marina; Romanholli formou o Cruela Cruel com Cesar Nine (ex-Coquetel Molotov e futuro Finis Africae),
+            Fernando
+            Magalhães (Barão Vermelho) e Pedro Serra (ex-Ao Redor da Alma e futuro Cordel Elétrico e Estranhos
+            Românticos);
+            Abílio tocou com Ivo Meireles e Teresa Cristina.
+        </p>
+        <p>A banda volta à atividade em 2001. Em 2004, lança seu terceiro disco, Novo mundo, pelo selo
+            Psicotrônica. Em novembro do mesmo ano, a banda participa do TIM Festival, um dos mais importantes eventos
+            de música do Brasil, tocando no palco principal, abrindo a noite do dia 6, sábado, para a cantora PJ Harvey
+            e o
+            grupo Primal Scream.</p>
 
-
-Primeiros lançamentos e reconhecimento
-
- Em 1987 gravam uma fita demo, com músicas como Carne e Osso, Quadrinhos e Idade Média. 
- Essas músicas começaram a tocar na rádio Fluminense FM, o que ajudou bastante no reconhecimento do grupo. 
- O primeiro LP, chamado Picassos Falsos (1987), vem logo depois, com boa aceitação especialmente no Rio de Janeiro e em Belo Horizonte. 
-
-
-
-<p></p>Estilo e inovações
-
- Um dos traços mais marcantes da banda: misturar o rock/soul/funk com ritmos regionais brasileiros — baião, samba, afoxé, maracatu, etc. Isso numa época (anos 80) em que não era comum no rock nacional. 
- O disco Supercarioca (1988) é especialmente citado como inovador nesse aspecto, tanto musicalmente quanto liricamente. 
-
-
-
-Hiato e retomadas
-
- Em 1990, depois de lançarem dois álbuns, a banda entra em hiato. 
- Os integrantes seguem caminhos paralelos: Humberto Effe faz carreira solo; Gustavo Corsi, Romanholli, Abílio participam de outros projetos musicais. ([Scream & Yell][2])
- Voltaram a se reunir em 2001. 
- Em 2004 lançam o álbum Novo Mundo. 
-
-
-
-Últimos trabalhos e legado
-
- Em 2014-2015 comemoram os 25 anos do álbum Supercarioca, com regravação completa, shows especiais, documentário. [3])
- Em 2017 lançam o álbum Nem Tudo Pode Se Ver, contendo nove músicas inéditas + regravação de Pavão Mysteriozo. ([Jornal do Brasil][4])
- Houve mudanças de formação: o baixista Abílio Rodrigues deixou o grupo após muitos anos; bateristas foram substituídos para shows etc. ([Jornal do Brasil][4])
-
-
-
-Importância cultural
-
- Picassos Falsos é considerada uma banda de vanguarda para o rock/pop latino-brasileiro nos anos 80, especialmente pelo modo como antecipou práticas que só se popularizariam depois (anos 90). ([CBN Campinas 99,1 FM][5])
- Influenciou bandas e movimentos posteriores que trabalham com fusões regionais + rock/pop. ([Visão Regional][6])
-
-
-
-
-
-[1]: https://pt.wikipedia.org/wiki/Picassos_Falsos?utm_source=chatgpt.com "Picassos Falsos"
-[2]: https://www.screamyell.com.br/musicadois/picassosfalsos.html?utm_source=chatgpt.com "Scream & Yell - Picassos Falsos - por Marcelo Costa"
-[3]: https://www.rockonboard.com.br/2014/09/picassos-falsos-lanca-especial-de-25.html?utm_source=chatgpt.com "Picassos Falsos lança especial de 25 anos do “Supercarioca”"
-[4]: https://www.jb.com.br/cultura/noticias/2017/06/16/picassos-falsos-lanca-nem-tudo-pode-se-ver-em-22-de-junho-no-rival.html?utm_source=chatgpt.com "Picassos Falsos lança \"Nem tudo pode se ver\" em 22 de junho, no Rival"
-[5]: https://portalcbncampinas.com.br/2021/10/a-mistura-de-ritmos-da-banda-picassos-falsos/?utm_source=chatgpt.com "A mistura de ritmos da banda Picassos Falsos - CBN Campinas 99,1 FM"
-[6]: https://visaoregional.com.br/2014/07/14/disco-fundamental-rock-brasileiro-e-regravado/?utm_source=chatgpt.com "Disco fundamental do rock brasileiro é regravado - Visão Regional"
-
+        <p>Em 2016, Picassos Falsos lança seu quarto álbum, Nem tudo pode se ver, produção independente lançada a partir
+            de
+            financiamento coletivo.</p>
     </main>
 
 
@@ -79,4 +106,5 @@ Importância cultural
 
     </footer>
 </body>
+
 </html>
