--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         <h1>PICASSOS FALSOS</h1>
       </div>
       <nav>
+        
         <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a
         ><a href="videos.html">VÍDEOS E FOTOS</a
         ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
@@ -27,7 +28,7 @@
         <div class="texto">
           <h1>Seja bem vindo à página dos Picassos Falsos</h1>
           <h6>(fanmade)</h6>
-          <div class="div-roda"><img class="roda" src="img/picassos redondos.png" alt=""></div>
+         
           <br>    
           <p>
             Infelizmente aquela frase não é nossa, mas de um grande pintor espanhol, e como forma de homenagem é o nome dessa grande banda brasileira. Aqui você encontrará informações sobre a banda, suas músicas,
@@ -46,6 +47,6 @@
           </p>
       </div>
     </main>
-    <footer></footer>
+    <footer><i>Todos os direitos reservados</i></footer>
   </body>
 </html>
