--- a/Ativ-Banda-main/historia.html
+++ b/Ativ-Banda-main/historia.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História</title>
     <link rel="stylesheet" href="CSS/historia.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,12 +25,11 @@
 
 
     <main>
-         <div class="comeco-main">
         <p>
         <h2>Picassos Falsos é uma banda brasileira surgida em 1985 no Rio de Janeiro.</h2>
         </p>
         <br>
-       
+        <div>
         <p>A banda foi uma das pioneiras, na geração dos anos 1980, em misturar <strong>rock, soul e funk com baião,
                 afoxé,
                 ijexá, maracatu, coco e samba</strong> , algo que só viria a ser comum na música brasileira a partir dos
@@ -97,7 +99,7 @@
             e o
             grupo Primal Scream.</p>
 
-        <p>Em 2016, Picassos Falsos lança seu quarto álbum, "Nem tudo pode se ver", produção independente lançada a partir
+        <p>Em 2016, Picassos Falsos lança seu quarto álbum, Nem tudo pode se ver, produção independente lançada a partir
             de
             financiamento coletivo.</p>
     </main>
