fiz os sucessos e um pouco do sobre mim

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
       <div class="main-content">
         <div class="pablo">
           <h1>“Cansei de ser moderno. Quero ser eterno.”</h1>
-        <h2>— Pablo Picasso</h2> <a href="https://www.todamateria.com.br/pablo-picasso/" target="_blank"><img class="img-pablo" src="img/pablo.picasso.jpg" alt="Pablo Picasso"></a>
+        <h2>— Pablo Picasso</h2> <a href="https://www.todamateria.com.br/pablo-picasso/" target="_blank"><img class="img-pablo" src="CSS/img/pablo.picasso.jpg" alt="Pablo Picasso"></a>
       </div>
         <div class="texto">
           <h1>Seja bem vindo à página dos Picassos Falsos</h1>
