mudei algumas pags e fiz a banda

--- a/eu.html
+++ b/eu.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mine person</title>
     <link rel="stylesheet" href="CSS/eu.css" />
   </head>
   <body>
-    <header>
+   <header>
       <div class="h-title">
-        <h1>SOBRE MIM</h1>
+        <h2>EU</h2>
       </div>
       <nav>
-        <a href="home.html">HOME</a><a href="musicas.html">MÚSICAS</a
-        ><a href="videos.html">VÍDEOS E FOTOS</a
-        ><a href="historia.html">HISTÓRIA</a>
+        <a href="home.html">HOME</a>
         <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
+        ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
       </nav>
     </header>
     <main>
@@ -29,7 +30,7 @@
           ESTRUTURAÇÃO DE CONTEÚDOS), Álvaro. E visa alcançar o conceito
           absoluto, A, para que tenha um ótimo final de ano e muita paz.
         </p>
-        <div class="formulario"><p>ÁREA FORMS</p></div>
+        <div class="formulario"><p>ÁREA professor laec</p></div>
       </div>
     </main>
     <footer><i>Todos os direitos reservados</i></footer>
