--- a/historia.html
+++ b/historia.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
-    <header>
-        <div class="h-title">
-            <h2>HISTÓRIA</h2>
-        </div>
-        <nav>
-            <a href="home.html">HOME</a>
-            <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a><a href="videos.html">VÍDEOS E
-                FOTOS</a> <a href="eu.html">SOBRE MIM</a>
-        </nav>
+   <header>
+      <div class="h-title">
+        <h2>HISTÓRIA</h2>
+      </div>
+      <nav>
+        <a href="home.html">HOME</a>
+        <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
+        ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
+      </nav>
     </header>
 
 
