--- a/home.html
+++ b/home.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="CSS/home.css" />
   </head>
 
   <body>
-    <header>
+ <header>
       <div class="h-title">
-        <h1>PICASSOS FALSOS</h1>
+        <h2>HOME</h2>
       </div>
       <nav>
-        
-        <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a
-        ><a href="videos.html">VÍDEOS E FOTOS</a
+        <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
         ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
       </nav>
     </header>
@@ -42,8 +42,7 @@
           </p>
           <p>
             Se você é fã da banda ou está curioso para saber mais, este é o
-            lugar certo! Aproveite sua visita e não hesite em entrar em contato
-            conosco se tiver alguma dúvida ou comentário. (Para entrar em contato, clique na seção "<i>SOBRE MIM</i>" no menu acima👆 e preencha o formulário.)
+            lugar certo!  Esperamos que você aproveite sua visita e volte sempre!
           </p>
       </div>
     </main>
