--- a/sucessos.html
+++ b/sucessos.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="CSS/sucesso.css" />
   </head>
   <body>
-    <header>
+ <header>
       <div class="h-title">
-        <h1>SUCESSOS</h1>
+        <h2>SUCESSOS</h2>
       </div>
       <nav>
-        <a href="home.html">HOME</a><a href="musicas.html">MÚSICAS</a
-        ><a href="videos.html">VÍDEOS E FOTOS</a
+        <a href="home.html">HOME</a>
+        <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
         ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
       </nav>
     </header>
-
     <main>
       <div class="main-content">
         <div class="sucessos">
