--- a/Ativ-Banda-main/eu.html
+++ b/Ativ-Banda-main/eu.html
@@ -3,31 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eu</title>
+    <title>Mine person</title>
     <link rel="stylesheet" href="CSS/eu.css" />
   </head>
   <body>
-    <header>
+   <header>
       <div class="h-title">
-        <h1>Sobre mim</h1>
+        <h2>EU</h2>
       </div>
       <nav>
         <a href="home.html">HOME</a>
-        <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a
-        ><a href="videos.html">VÍDEOS E FOTOS</a
-        ><a href="historia.html">HISTÓRIA</a>
+        <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
+        ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
       </nav>
     </header>
     <main>
-      <div class="imagem">
-        <img src="CSS/img/IMG_20250712_133252.jpg" alt="jao"/>
-        <ul>
-          <li>João Manoel Ramão Tomin</li>
-          <li>Estudante do IFPR, Campus Assis Chateaubriand</li>
-          <li class="subli">Cursando Informática para Internet</li>
-          <li>Quer se tornar um programador</li>
-        </ul>
+      <img src="CSS/img/eu.jpg" alt="" />
+      <div class="texto">
+        <h1>João Manoel Ramão Tomin</h1>
+        <p>
+          Criador do site de fã dos Picassos Falsos, João Manoel é aluno do
+          Instituto Federal do Paraná, Campus Assis Chateaubriand. Fez este site
+          a pedido do professor de LAEC (LINGUAGENS DE APRESENTAÇÃO E
+          ESTRUTURAÇÃO DE CONTEÚDOS), Álvaro. E visa alcançar o conceito
+          absoluto, A, para que tenha um ótimo final de ano e muita paz.
+        </p>
+        <div class="formulario"><p>ÁREA professor laec</p></div>
       </div>
     </main>
+    <footer><i>Todos os direitos reservados</i></footer>
   </body>
 </html>
