--- a/Ativ-Banda-main/historia.html
+++ b/Ativ-Banda-main/historia.html
@@ -6,21 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História</title>
     <link rel="stylesheet" href="CSS/historia.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="h-title">
-            <h2>HISTÓRIA</h2>
-        </div>
-        <nav>
-            <a href="home.html">HOME</a>
-            <a href="sucessos.html">SUCESSOS</a><a href="musicas.html">MÚSICAS</a><a href="videos.html">VÍDEOS E
-                FOTOS</a> <a href="eu.html">SOBRE MIM</a>
-        </nav>
+   <header>
+      <div class="h-title">
+        <h2>HISTÓRIA</h2>
+      </div>
+      <nav>
+        <a href="home.html">HOME</a>
+        <a href="sucessos.html">SUCESSOS</a>
+        <a href="musicas.html">MÚSICAS</a
+        ><a href="banda.html">BANDA</a
+        ><a href="historia.html">HISTÓRIA</a> <a href="eu.html">SOBRE MIM</a>
+      </nav>
     </header>
 
 
